<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/back"
                android:layout_gravity="start"
                android:src="@drawable/ic_arrow_back_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dadada"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:id="@+id/logo"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/placeholder"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/logo"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:id="@+id/phone"
                    android:digits="0123456789"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_account_type"
                    android:entries="@array/account_type"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/sp_category"
                    android:layout_height="wrap_content"
                    android:entries="@array/category"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/black"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="6dp"
                android:layout_gravity="center_horizontal"
                app:spinning_bar_width="4dp" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>